--- a/main/index.html
+++ b/main/index.html
@@ -22,12 +22,12 @@
     <p id="xmax/min">xmax/min = / </p> 
     <p id="ymax/min">ymax/min = / </p> 
     <p id="zmax/min">zmax/min = / </p> 
-    <p id="magnitude">mag =  </p> 
-    <p id="theta">theta =  </p> 
     <p id="phi">phi =  </p> 
+    <p id="theta">theta =  </p> 
+    <p id="magnitude">mag =  </p> 
     <p id="graph"> </p> 
     <form> <input type="button" id="clearcal" value="cal">clear calibration </form>
-    <form> <input type="button" id="3dtoggle" value="stop3d">Stop 3d plot update</form>
+    <form> <input type="button" id="3dtoggle" value="TurnOn">Stop/Start 3d plot update</form>
     <div id="myMag" > </div>
     <div id="myDir" > </div>
     <div id="myMod" class= "rotated">
